--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/AGE CALCULATOR/index.html"
+    "livePreview.defaultPreviewPath": "/TO DO LIST/index.html"
 }
