--- a/TO DO LIST/package.json
+++ b/TO DO LIST/package.json
@@ -2,7 +2,7 @@
   "name": "to-do-list",
   "version": "1.0.0",
   "description": "A To-Do-List In Which  You Can Add, Delete And Mark As Completed Tasks.",
-  "main": "script.js.js",
+  "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
